@@ -1,6 +1,10 @@
 ispCP ω 1.0.0 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2008-12-22 Daniel Andreca
+	- GUI:
+		* Fixed reseller update problems inconsistency between current_ftp_cnt and actual ftp count
+
 2008-12-21 Daniel Andreca
 	- GUI:
 		* Small bug into template webtools.tpl
